Correccion en obtencion de imagen ASU_EN_ORDEN_SOLO-01.png